--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 
 enable_language(CXX)
 
-find_package(xbmc REQUIRED)
+find_package(kodi REQUIRED)
 find_package(Dumb)
 
 if(NOT DUMB_FOUND)
@@ -14,7 +14,7 @@ if(NOT DUMB_FOUND)
   set(DUMB_LIBRARIES dumb)
   set(DUMB_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/lib/dumb/include)
 endif()
-include_directories(${XBMC_INCLUDE_DIR}
+include_directories(${KODI_INCLUDE_DIR}
                     ${DUMB_INCLUDE_DIRS})
 
 set(DUMB_SOURCES src/DumbCodec.cpp)
