--- a/lib/dumb/cmake/CMakeLists.txt
+++ b/lib/dumb/cmake/CMakeLists.txt
@@ -116,9 +116,9 @@ set(INSTALL_HEADERS
 add_library(dumb ${SOURCES})
 set_target_properties(dumb PROPERTIES DEBUG_POSTFIX d)
 
-INSTALL(FILES ${INSTALL_HEADERS} DESTINATION include/dumb/)
-INSTALL(TARGETS dumb
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib
-)
+#INSTALL(FILES ${INSTALL_HEADERS} DESTINATION include/dumb/)
+#INSTALL(TARGETS dumb
+#    RUNTIME DESTINATION bin
+#    LIBRARY DESTINATION lib
+#    ARCHIVE DESTINATION lib
+#)
