--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -11,10 +11,10 @@
     point="kodi.audiodecoder"
     name="dumb"
     extension=".it|.xm|.s3m"
-    library_linux="audiodecoder.dumb.so"/>
+    library_@PLATFORM@="@LIBRARY_FILENAME@"/>
   <extension point="xbmc.addon.metadata">
     <summary lang="en">DUMB Audio Decoder</summary>
     <description lang="en">DUMB Audio Decoder</description>
-    <platform>all</platform>
+    <platform>@PLATFORM@</platform>
   </extension>
 </addon>
