--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,39 @@
 # build artifacts
 build/
+audiodecoder.*/addon.xml
+
+# Debian build files
+debian/changelog
+debian/files
+debian/*.log
+debian/*.substvars
+debian/.debhelper/
+debian/tmp/
+debian/kodi-audiodecoder-*/
 obj-x86_64-linux-gnu/
-audiodecoder.dumb/addon.xml
+
+# commonly used editors
+# vim
+*.swp
+
+# Eclipse
+*.project
+*.cproject
+.classpath
+*.sublime-*
+.settings/
+
+# KDevelop 4
+*.kdev4
+
+# Visual Studio
+.vs/
+
+# gedit
+*~
+
+# CLion
+/.idea
 
 # clion
 .idea/
-
-# Eclipse/CDT
-.cproject
-.project
-.settings/
