--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Windows
-    runs-on: windows
+    runs-on: windows-2019
     
     steps:
     - uses: actions/checkout@v2
