--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,12 +12,12 @@ jobs:
     - uses: actions/checkout@v2
     - run: |
         echo "Hello World"
-        echo "GITHUB_WORKFLOW $GITHUB_WORKFLOW"
-        echo "GITHUB_ACTION $GITHUB_ACTION"
+        echo "GITHUB_WORKFLOW $(GITHUB_WORKFLOW)"
+        echo "GITHUB_ACTION $(GITHUB_ACTION)"
         echo "HOME $HOME"
-        echo "GITHUB_REPOSITORY $GITHUB_REPOSITORY"
-        echo "GITHUB_EVENT_NAME $GITHUB_EVENT_NAME"
-        echo "GITHUB_WORKSPACE $GITHUB_WORKSPACE"
+        echo "GITHUB_REPOSITORY $(GITHUB_REPOSITORY)"
+        echo "GITHUB_EVENT_NAME $(GITHUB_EVENT_NAME)"
+        echo "GITHUB_WORKSPACE $(GITHUB_WORKSPACE)"
         dir
         cd ..
         dir
