add license and source url to addon.xml

--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -17,8 +17,12 @@
 On Kodi Supports playback of the following module formats:
 - IT (Impulse Tracker)
 - XM (Fasttracker II)
-- S3M (Scream Tracker 3)
-</description>
+- S3M (Scream Tracker 3)</description>
     <platform>@PLATFORM@</platform>
+    <license>GPL-2.0</license>
+    <source>https://github.com/xbmc/audiodecoder.dumb</source>
+    <assets>
+      <icon>icon.png</icon>
+    </assets>
   </extension>
 </addon>
