add deprecated note to addon README and in addon.xml
This addon can be also done with audiodecoder.openmpt.

--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -27,6 +27,8 @@ On Kodi Supports playback of the following module formats:
 - S3M (Scream Tracker 3)</description>
     <disclaimer lang="de_DE">Es wird empfohlen, anstelle dieses Addons "OpenMPT Audio Decoder" zu verwenden.</disclaimer>
     <disclaimer lang="en_GB">It is recommended to use "OpenMPT Audio Decoder" addon instead of this one.</disclaimer>
+    <lifecyclestate type="deprecated" lang="de_DE">Ersetzt durch das Addon audiodecoder.openmpt! Aber hier auch noch verwendbar.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="en_GB">Replaced by audiodecoder.openmpt addon! However, but still usable here.</lifecyclestate>
     <platform>@PLATFORM@</platform>
     <license>GPL-2.0-or-later</license>
     <source>https://github.com/xbmc/audiodecoder.dumb</source>
