fix stupid typo on sync-addon-metadata-translations.yml

--- a/.github/workflows/sync-addon-metadata-translations.yml
+++ b/.github/workflows/sync-addon-metadata-translations.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   default:
-    if: github.repository == 'xbmc/audiodecoder.dump'
+    if: github.repository == 'xbmc/audiodecoder.dumb'
     runs-on: ubuntu-latest
 
     steps:
