--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -20,6 +20,8 @@
     <summary lang="da_DK">Dynamic Universal Music Bibliotheque (dynamisk universel musikbibliotek)</summary>
     <summary lang="de_DE">Dynamic Universal Music Bibliotheque</summary>
     <summary lang="en_GB">Dynamic Universal Music Bibliotheque</summary>
+    <summary lang="es_ES">Biblioteca Dinámica Universal de Música</summary>
+    <summary lang="es_MX">Biblioteca de Música Universal Dinámica (Dynamic Music Universal Bibliotheque, N. del T.)</summary>
     <summary lang="id_ID">Bibliotheque Musik Universal Dinamis</summary>
     <summary lang="ko_KR">Dynamic Universal Music Bibliotheque</summary>
     <summary lang="pl_PL">Dynamic Universal Music Bibliotheque (DUMB)</summary>
@@ -28,6 +30,8 @@
     <description lang="da_DK">DUMB er et bibliotek med lydgengivere. Den læser modulfiler og udsender lyd, der kan dumpes til det faktiske lydafspilningsbibliotek.[CR][CR]Kodi understøtter afspilning af følgende modulformater:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="de_DE">DUMB ist eine Modul-Audio-Renderer-Bibliothek. Es liest Moduldateien und gibt zugehörigen Audiostream aus, das in die eigentliche Audiowiedergabebibliothek kopiert werden kann.[CR][CR]An Kodi wird die Wiedergabe der folgenden Modulformate unterstützt:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="en_GB">DUMB is a module audio renderer library. It reads module files and outputs audio that can be dumped to the actual audio playback library.[CR][CR]On Kodi Supports playback of the following module formats:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
+    <description lang="es_ES">DUMB es una libreria de procesamiento de módulos de audio. Lee archivos módulo y saca el audio que puede enviarse a la libreria de reproducción de audio actual.[CR][CR]En Kodi soporta la reproducción de los siguientes formatos de módulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
+    <description lang="es_MX">DUMB es una librería de procesamiento de módulos de audio. Lee los archivos de módulo y extrae el audio que puede enviarse a la librería de reproducción de audio actual.[CR][CR]En Kodi soporta la reproducción de los siguientes formatos de módulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="id_ID">DUMB adalah pustaka penyaji audio modul. Itu membaca file modul dan mengeluarkan audio yang dapat dibuang ke perpustakaan pemutaran audio yang sebenarnya.[CR][CR]On Kodi Mendukung pemutaran format modul berikut:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Pelacak Jeritan 3)</description>
     <description lang="ko_KR">DUMB는 모듈 오디오 렌더러 라이브러리입니다. 모듈 파일을 읽고 실제 오디오 재생 라이브러리에 덤프할 수 있는 오디오를 출력합니다.[CR][CR]Kodi에서 다음 모듈 형식의 재생을 지원합니다.[CR]- IT(Impulse Tracker)[CR]- XM(Fasttracker II)[CR]- S3M(Stream Tracker 3)</description>
     <description lang="pl_PL">DUMB to modułowa biblioteka renderująca dźwięk. Czyta pliki modułów i wysyła dźwięk, który można zrzucić do rzeczywistej biblioteki odtwarzania dźwięku.[CR][CR]W Kodi obsługuje odtwarzanie następujących formatów modułów:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
@@ -36,6 +40,8 @@
     <disclaimer lang="da_DK">Det anbefales at bruge &quot;OpenMPT Audio Decoder&quot; i stedet for denne.</disclaimer>
     <disclaimer lang="de_DE">Es wird empfohlen, anstelle dieses Addons &quot;OpenMPT Audio Decoder&quot; zu verwenden.</disclaimer>
     <disclaimer lang="en_GB">It is recommended to use &quot;OpenMPT Audio Decoder&quot; addon instead of this one.</disclaimer>
+    <disclaimer lang="es_ES">Se recomienda usar el addon &quot;Decodificador de Audio OpenMPT&quot; en lugar de este.</disclaimer>
+    <disclaimer lang="es_MX">Se recomienda utilizar el complemento &quot;Decodificador de audio OpenMPT&quot; en lugar de este.</disclaimer>
     <disclaimer lang="id_ID">Disarankan untuk menggunakan addon &quot;OpenMPT Audio Decoder&quot; daripada yang ini.</disclaimer>
     <disclaimer lang="ko_KR">이 애드온 대신 &quot;OpenMPT 오디오 디코더&quot; 애드온을 사용하는 것이 좋습니다.</disclaimer>
     <disclaimer lang="pl_PL">Zaleca się użycie dodatku &quot;Dekoder dźwięku OpenMPT&quot; zamiast tego.</disclaimer>
@@ -44,6 +50,8 @@
     <lifecyclestate type="deprecated" lang="da_DK">Erstattet af audiodecoder.openmpt addon! Dette addon er dog stadig brugbart.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="de_DE">Ersetzt durch das Addon audiodecoder.openmpt! Aber hier auch noch verwendbar.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="en_GB">Replaced by audiodecoder.openmpt addon! However, but still usable here.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="es_ES">¡Reemplazado por el addon audiodecoder.openmpt! De todos modos, puede seguir usándose.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="es_MX">¡Reemplazado por el complemento audiodecoder.openmpt! Sin embargo, aún puedes utilizarlo.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="id_ID">Digantikan oleh audiodecoder.openmpt addon! Namun, tapi masih bisa digunakan di sini.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="ko_KR">audiodecoder.openmpt 애드온으로 대체되었습니다! 하지만 아직 여기에서도 사용할 수 있습니다.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="pl_PL">Zastąpiony przez dodatek audiodecoder.openmpt! Jednak nadal jest tutaj użyteczny.</lifecyclestate>
