Sync of addon metadata translations

--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -18,7 +18,7 @@
       <icon>icon.png</icon>
     </assets>
     <summary lang="da_DK">Dynamic Universal Music Bibliotheque (dynamisk universel musikbibliotek)</summary>
-    <summary lang="de_DE">Dynamic Universal Music Bibliotheque</summary>
+    <summary lang="de_DE">Dynamische universelle Musikbibliothek</summary>
     <summary lang="en_GB">Dynamic Universal Music Bibliotheque</summary>
     <summary lang="es_ES">Biblioteca Dinámica Universal de Música</summary>
     <summary lang="es_MX">Biblioteca de Música Universal Dinámica (Dynamic Music Universal Bibliotheque, N. del T.)</summary>
