Sync of addon metadata translations

--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -24,6 +24,7 @@
     <summary lang="es_MX">Biblioteca de Música Universal Dinámica (Dynamic Music Universal Bibliotheque, N. del T.)</summary>
     <summary lang="id_ID">Bibliotheque Musik Universal Dinamis</summary>
     <summary lang="ko_KR">Dynamic Universal Music Bibliotheque</summary>
+    <summary lang="nl_NL">Dynamisch Universele Muziekbibliotheek</summary>
     <summary lang="pl_PL">Dynamic Universal Music Bibliotheque (DUMB)</summary>
     <summary lang="ru_RU">DUMB – Dynamic Universal Music Bibliotheque</summary>
     <summary lang="zh_CN">动态通用音乐库（Dynamic Universal Music Bibliotheque）</summary>
