--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -17,7 +17,7 @@
     <assets>
       <icon>icon.png</icon>
     </assets>
-    <summary lang="ca_ES">Dynamic Universal Music Bibliotheque</summary>
+    <summary lang="ca_ES">Biblioteca de música universal dinàmica (Dynamic Universal Music Bibliotheque)</summary>
     <summary lang="da_DK">Dynamic Universal Music Bibliotheque (dynamisk universel musikbibliotek)</summary>
     <summary lang="de_DE">Dynamische universelle Musikbibliothek</summary>
     <summary lang="en_GB">Dynamic Universal Music Bibliotheque</summary>
