--- a/audiodecoder.dumb/addon.xml.in
+++ b/audiodecoder.dumb/addon.xml.in
@@ -23,6 +23,7 @@
     <summary lang="en_GB">Dynamic Universal Music Bibliotheque</summary>
     <summary lang="es_ES">Biblioteca Dinámica Universal de Música</summary>
     <summary lang="es_MX">Biblioteca de Música Universal Dinámica (Dynamic Music Universal Bibliotheque, N. del T.)</summary>
+    <summary lang="eu_ES">Dynamic Universal Music Bibliotheque (Musika dinamikoko liburutegi unibertsala)</summary>
     <summary lang="fr_FR">Bibliothèque Dynamic Universal Music</summary>
     <summary lang="hr_HR">Dinamička univerzalna glazbena biblioteka</summary>
     <summary lang="id_ID">Bibliotheque Musik Universal Dinamis</summary>
@@ -38,6 +39,7 @@
     <description lang="en_GB">DUMB is a module audio renderer library. It reads module files and outputs audio that can be dumped to the actual audio playback library.[CR][CR]On Kodi Supports playback of the following module formats:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="es_ES">DUMB es una libreria de procesamiento de módulos de audio. Lee archivos módulo y saca el audio que puede enviarse a la libreria de reproducción de audio actual.[CR][CR]En Kodi soporta la reproducción de los siguientes formatos de módulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="es_MX">DUMB es una librería de procesamiento de módulos de audio. Lee los archivos de módulo y extrae el audio que puede enviarse a la librería de reproducción de audio actual.[CR][CR]En Kodi soporta la reproducción de los siguientes formatos de módulo:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
+    <description lang="eu_ES">DUMB (Musika dinamikoko liburutegi unibertsala) audio-bihurtzaileen liburutegi bat da. Fitxategi-moduluak irakurri, atera eta oraingo audio-erreproduzitzailearen liburutegira bidaltzen du.[CR][CR]Kodi hurrengo formatu-moduluekin bateragarria da:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="fr_FR">DUMB est une bibliothèque de modules de rendu audio. Il lit les fichiers de module et produit de l&apos;audio qui peut être vidé vers la bibliothèque de lecture audio réelle.[CR][CR]Sur Kodi, il prend en charge la lecture des formats de module suivants :[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="hr_HR">DUMB je modul biblioteke zvučnog prikaza. Čita datoteke modula i stvara izlaz zvuka koji se može ispisati u zvučnu datoteku reprodukcije.[CR][CR]Na Kodiju podržava reprodukciju sljedećih formata modula:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Scream Tracker 3)</description>
     <description lang="id_ID">DUMB adalah pustaka penyaji audio modul. Itu membaca file modul dan mengeluarkan audio yang dapat dibuang ke perpustakaan pemutaran audio yang sebenarnya.[CR][CR]On Kodi Mendukung pemutaran format modul berikut:[CR]- IT (Impulse Tracker)[CR]- XM (Fasttracker II)[CR]- S3M (Pelacak Jeritan 3)</description>
@@ -53,6 +55,7 @@
     <disclaimer lang="en_GB">It is recommended to use &quot;OpenMPT Audio Decoder&quot; addon instead of this one.</disclaimer>
     <disclaimer lang="es_ES">Se recomienda usar el addon &quot;Decodificador de Audio OpenMPT&quot; en lugar de este.</disclaimer>
     <disclaimer lang="es_MX">Se recomienda utilizar el complemento &quot;Decodificador de audio OpenMPT&quot; en lugar de este.</disclaimer>
+    <disclaimer lang="eu_ES">Honen ordez, &quot;OpenMPT Audio deskodetzailea&quot; gehigarria erabiltzea gomendatzen da.</disclaimer>
     <disclaimer lang="fr_FR">Il est recommandé d&apos;utiliser l&apos;addon &quot;OpenMPT Audio Decoder&quot; au lieu de celui-ci.</disclaimer>
     <disclaimer lang="hr_HR">Preporučljivo je korištenje &quot;OpenMPT zvučni dekôder&quot; dodatka umjesto ovog.</disclaimer>
     <disclaimer lang="id_ID">Disarankan untuk menggunakan addon &quot;OpenMPT Audio Decoder&quot; daripada yang ini.</disclaimer>
@@ -68,6 +71,7 @@
     <lifecyclestate type="deprecated" lang="en_GB">Replaced by audiodecoder.openmpt addon! However, but still usable here.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="es_ES">¡Reemplazado por el addon audiodecoder.openmpt! De todos modos, puede seguir usándose.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="es_MX">¡Reemplazado por el complemento audiodecoder.openmpt! Sin embargo, aún puedes utilizarlo.</lifecyclestate>
+    <lifecyclestate type="deprecated" lang="eu_ES">audiodecoder.openmpt gehigarriarengatik ordezkatua! Hala ere, oraindik erabil daiteke.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="fr_FR">Remplacé cependant par l&apos;addon audiodecoder.openmpt ! Mais toujours utilisable ici.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="hr_HR">Zamijenjeno je s audiodecoder.openmpt dodatkom! Ipak, je još ovdje iskoristiv.</lifecyclestate>
     <lifecyclestate type="deprecated" lang="id_ID">Digantikan oleh audiodecoder.openmpt addon! Namun, tapi masih bisa digunakan di sini.</lifecyclestate>
